Adding titles to the articles

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h2 class="section__tittle">Аккордеон</h2>
     <div class="section__container accordion">
       <article class="accordion__item item">
+          <h3 class="accordion__item-title visually-hidden">Элемент аккордеона</h3>
           <div class="item__title">
             <button class="item__button">
               <span>Сетка каталога с flex</span>
@@ -35,6 +36,7 @@
           </div>
       </article>
       <article class="accordion__item item">
+          <h3 class="accordion__item-title visually-hidden">Элемент аккордеона</h3>
           <div class="item__title">
             <button class="item__button">
               <span>Сетка каталога с inline-block</span>
@@ -53,6 +55,7 @@
           </div>
       </article>
       <article class="accordion__item item">
+          <h3 class="accordion__item-title visually-hidden">Элемент аккордеона</h3>
           <div class="item__title">
             <button class="item__button">
               <span>Сетка каталога с float</span>
@@ -71,6 +74,7 @@
           </div>
       </article>
       <article class="accordion__item item">
+          <h3 class="accordion__item-title visually-hidden">Элемент аккордеона</h3>
           <div class="item__title">
             <button class="item__button">
               <span>Таблица</span>
@@ -94,6 +98,7 @@
           </div>
       </article>
       <article class="accordion__item item">
+          <h3 class="accordion__item-title visually-hidden">Элемент аккордеона</h3>
           <div class="item__title">
             <button class="item__button">
               <span>Таблица из div контейнеров</span>
